@@ -6,9 +6,11 @@ import lombok.Getter;
 import lombok.NoArgsConstructor;
 import lombok.Setter;
 import org.springframework.security.core.GrantedAuthority;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.UserDetails;
 
 import java.util.Collection;
+import java.util.Collections;
 import java.util.List;
 import java.util.stream.Collectors;
 
@@ -38,12 +40,9 @@ public class Utilisateur  implements UserDetails {
     private boolean actif = false;
 
 
-
     @Override
     public Collection<? extends GrantedAuthority> getAuthorities() {
-        return List.of(role).stream() // Retourne une liste contenant le rôle de l'utilisateur
-                .map(r -> (GrantedAuthority) () -> r.name()) // Utilise le nom du rôle comme une autorité
-                .collect(Collectors.toList());
+        return Collections.singletonList(new SimpleGrantedAuthority("ROLE_" + this.role));
     }
 
     @Override
